# waiting-games

./: .gitignore  .pre-commit-config.yaml  .releaserc.json  CLAUDE.md  Dockerfile  LICENSE  README.md  mise.toml  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: fetch-detector.sh
tests/: canvas_survives.test.mjs  conftest.py  idiot_renderer.test.mjs  pong_geometry.test.mjs  snake_interpolation.test.mjs  snake_readout.test.mjs  solitaire_renderer.test.mjs  test_auth.py  test_catalogue.py  test_client_clock.py  test_determinism.py  test_draw.py  test_games.py  test_hidden.py  test_i18n.py  test_idiot.py  test_ispy.py  test_realtime.py  test_renderers.py  test_snakes.py  test_solitaire.py  test_static_cache.py  test_twentyfortyeight.py  touch.test.mjs
waiting_games/: auth.py  lobby.py  main.py
waiting_games/games/: __init__.py  _rng.py  base.py  battleship.py  connectfour.py  dotsandboxes.py  draw.py  gris.py  hangman.py  idiot.py  ispy.py  nim.py  othello.py  pong.py  snake.py  snakes.py  solitaire.py  tictactoe.py  twentyfortyeight.py
waiting_games/static/: app.js  celebrate.js  i18n.js  index.html  sound.js  style.css  version.js
waiting_games/static/games/: _canvas.js  _cards.js  _debug.js  _geometry.js  _interpolate.js  _rng.js  _score.js  _vision.js  battleship.js  connectfour.js  dotsandboxes.js  draw.js  gris.js  hangman.js  idiot.js  ispy.js  nim.js  othello.js  pong.js  snake.js  snake_rules.js  snakes.js  snakes_rules.js  solitaire.js  tictactoe.js  twentyfortyeight.js
